correção pq fiz no arquivo errado

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -125,4 +125,12 @@ body{
         float: right;
         max-height: none;
     }
+    .navbar .menu-icon{
+        display: none;
+    }
+}
+
+#carousel{
+    overflow: hidden;
+    margin-top: 56px;
 }
