--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4,11 +4,16 @@
     padding: 0;
 }
 
+h2{
+    margin-left: 40px;
+    margin-top: 60px;
+}
 a {
     text-decoration: none;
     color: #000;
 }
-body{
+
+body {
     font-family: 'Roboto', sans-serif;
     background-color: #f4f4f4;
     color: #333;
@@ -16,121 +21,374 @@ body{
     font-size: 16px;
     margin: 0;
     padding: 0;
+
 }
 
-.navbar{
+.navbar {
     background-color: #fff;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    position: fixed;/*isso aq q esta dando bo com o resto*/
+    position: fixed;
+    /*isso aq q esta dando bo com o resto*/
     width: 100%;
     z-index: auto;
 }
-.navbar ul{
+
+.navbar ul {
     margin: 0;
     padding: 0;
-    list-style: none;/*delisga bullet points e numeros*/
+    list-style: none;
+    /*delisga bullet points e numeros*/
     overflow: hidden;
     background-color: #fff;
 }
-.navbar li a{
+
+.navbar li a {
     display: block;
-    outline: 1px solid red;
+    outline: 1px solid #ddd;
     padding: 20px;
     border-right: 1px solid #aaa;
     text-decoration: none;
 }
-.navbar ul a:hover{
+
+.navbar ul a:hover {
     background-color: #ddd;
 
 }
-.navbar .logo{
+
+.navbar .logo {
     float: left;
     display: block;
     font-size: 2em;
     padding: 10px 20px;
 
 }
-.navbar .menu{
+
+.navbar .menu {
     clear: both;
     max-height: 0;
-    transition: max-height 0.2s ease-out;/*animação de sair e entrar do menu*/
+    transition: max-height 0.2s ease-out;
+    /*animação de sair e entrar do menu*/
 }
 
-.navbar .menu-icon{
+.navbar .menu-icon {
     /*para aparecer as três barrinhas lá*/
-    border: 1px solid red;
     padding: 28px 20px;
     position: relative;
     float: right;
     cursor: pointer;
 
 }
-.navbar .menu-icon .nav-icon{
+
+.navbar .menu-icon .nav-icon {
     background-color: #333;
     display: block;
     height: 2px;
-    width: 18px;/*realy whobly until now*/
+    width: 18px;
+    /*realy whobly until now*/
     position: relative;
-    transition: background 0.2s ease-out;/*animação de novo*/
+    transition: background 0.2s ease-out;
+    /*animação de novo*/
 }
-.navbar .menu-icon .nav-icon:before{
+
+.navbar .menu-icon .nav-icon:before {
     background: #333;
-    content: " ";/*voltar aq*/
+    content: " ";
+    /*voltar aq*/
     display: block;
     height: 100%;
     width: 100%;
     position: absolute;
-    transition: all 0.2s ease-out;/*animação de novo*/
-    top: 5px; /*sobe 5px da posição inicial da barrinha, são 3 barrinhas, essa é a segunda*/
+    transition: all 0.2s ease-out;
+    /*animação de novo*/
+    top: 5px;
+    /*sobe 5px da posição inicial da barrinha, são 3 barrinhas, essa é a segunda*/
 }
-.navbar .menu-icon .nav-icon:after{
+
+.navbar .menu-icon .nav-icon:after {
     background: #333;
-    content: " ";/*voltar aq*/
+    content: " ";
+    /*voltar aq*/
     display: block;
     height: 100%;
     width: 100%;
     position: absolute;
-    transition: all 0.2s ease-out;/*animação de novo*/
-    top: -5px; /*desce 5px da posição inicial da barrinha, são 3 barrinhas, essa é a terceira*/
+    transition: all 0.2s ease-out;
+    /*animação de novo*/
+    top: -5px;
+    /*desce 5px da posição inicial da barrinha, são 3 barrinhas, essa é a terceira*/
 }
-.navbar .menu-btn{
+
+.navbar .menu-btn {
     display: none;
 }
+
 /*tutorial: FollowAndrew*/
-.navbar .menu-btn:checked ~ .menu{/*checked: quando o menu está clicado, aparece o menu*/
-    max-height: 240px;/*está animando por causa dos transition lá encima, sem isso só brota do nd*/
-    
+.navbar .menu-btn:checked~.menu {
+    /*checked: quando o menu está clicado, aparece o menu*/
+    max-height: 240px;
+    /*está animando por causa dos transition lá encima, sem isso só brota do nd*/
+
 }
-.navbar .menu-btn:checked ~ .menu-icon .nav-icon{
+
+.navbar .menu-btn:checked~.menu-icon .nav-icon {
     background: transparent;
 }
-.navbar .menu-btn:checked ~ .menu-icon .nav-icon:before{
+
+.navbar .menu-btn:checked~.menu-icon .nav-icon:before {
     transform: rotate(-45deg);
     top: 0;
 }
-.navbar .menu-btn:checked ~ .menu-icon .nav-icon:after{
+
+.navbar .menu-btn:checked~.menu-icon .nav-icon:after {
     transform: rotate(45deg);
     top: 0;
 }
 
-@media (min-width: 768px){
-    .navbar li{
+@media (min-width: 768px) {
+    .navbar li {
         float: left;
     }
-    .navbar li a{
+
+    .navbar li a {
         padding: 20px 30px;
     }
-    .navbar .menu{
+
+    .navbar .menu {
         clear: none;
         float: right;
         max-height: none;
     }
-    .navbar .menu-icon{
+
+    .navbar .menu-icon {
         display: none;
     }
 }
 
-#carousel{
-    overflow: hidden;
-    margin-top: 56px;
+#containerperfil {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-gap: 10px;
+    margin: 20px;
+    padding: 20px;
 }
+
+.fotoperfil {
+    width: 100%;
+    /* Garante que a imagem de perfil ocupe toda a largura do seu contêiner */
+    height: auto;
+    /* Para manter a proporção da imagem */
+}
+
+.fotoperfil img {
+    max-width: 350px;
+    max-height: 300px;
+    width: auto;
+    height: auto;
+    border-radius: 20%;
+}
+.iconeperfil{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    gap: 10px;
+
+}
+.iconefollow{
+    grid-template-columns: 1fr 1fr;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+
+@media (min-width: 768px) {
+    #containerperfil {
+        display: grid;
+        grid-template-areas: "foto descricao";
+        grid-template-columns: 1fr 3fr;
+    }
+
+    .fotoperfil {
+        grid-area: foto;
+        width: 100%;
+        /* Garante que a imagem de perfil ocupe toda a largura do seu conteiner */
+        height: auto;
+        /* Para manter a proporção da imagem */
+    }
+
+    .descricaoperfil {
+        grid-area: descricao;
+    }
+
+    .fotoperfil img {
+        max-width: 260px;
+        max-height: 210px;
+        width: auto;
+        height: auto;
+    }
+    #info{
+        grid-template-columns: 1fr 1fr;
+        display: flex;
+        justify-content: space-between;
+        gap: 10px;
+    }
+    
+    .iconefollow{
+        grid-template-columns: 1fr 1fr;
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+        gap: 10px;
+    }
+}
+
+#repositorios {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-gap: 10px;
+    margin: 20px;
+    padding: 20px;
+    width: 100%;
+    align-items: center;
+}
+
+#repositorios h3 {
+    text-transform: capitalize;
+    font-size: 1.2em;
+    margin-bottom: 10px;
+}
+
+.repositorio1 {
+    background-color: #fff;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    padding: 20px;
+    border: 1px solid #ddd;
+    display: block;
+    text-decoration: none;
+    color: #333;
+    transition: background-color 0.3s;
+    gap: 10px;
+}
+
+.repositorio2 {
+    background-color: #fff;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    padding: 20px;
+    border: 1px solid #ddd;
+    display: block;
+    text-decoration: none;
+    color: #333;
+    transition: background-color 0.3s;
+}
+
+.repositorio3 {
+    background-color: #fff;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    padding: 20px;
+    border: 1px solid #ddd;
+    display: block;
+    text-decoration: none;
+    color: #333;
+    transition: background-color 0.3s;
+}
+
+.repositorio4 {
+    background-color: #fff;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    padding: 20px;
+    border: 1px solid #ddd;
+    display: block;
+    text-decoration: none;
+    color: #333;
+    transition: background-color 0.3s;
+}
+
+.repositorio1:hover {
+    background-color: #ddd;
+}
+
+#iconerepo {
+    grid-template-columns: 1fr 1fr;
+    grid-template-areas: "star fork";
+    display: flex;/*para alinhar os icones lado a lado*/
+    justify-content: flex-end;/*deveria colocar td no final mas n está funfando ainda*/
+    justify-self: flex-end;
+    gap: 20px;
+}
+
+
+@media (min-width: 768px) {
+    #repositorios h2{
+        align-items: flex-start;
+    }
+    #repositorios {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+        grid-template-areas: "repositorio1 repositorio2 repositorio3 repositorio4";
+        grid-gap: 10px;
+        margin: 20px;
+        padding: 20px;
+        margin-top: 20px;
+        width: 100%;
+        align-items: center;
+        flex-wrap: wrap;
+        align-items: stretch;
+    }
+
+    .repositorio1 {
+        grid-area: repositorio1;
+        width: 100%;
+    }
+
+    .repositorio2 {
+        grid-area: repositorio2;
+        width: 100%;
+    }
+
+    .repositorio3 {
+        grid-area: repositorio3;
+        width: 100%;
+    }
+
+    .repositorio4 {
+        grid-area: repositorio4;
+        width: 100%;
+    }
+    #iconerepo {
+        grid-template-columns: 1fr 1fr;
+        grid-template-areas: "star fork";
+        display: flex;/*para alinhar os icones lado a lado*/
+        justify-content: space-evenly;/*deveria colocar td no final mas n está funfando ainda*/
+        align-self: flex-end;
+    }
+}
+
+#colegas{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-gap: 10px;
+    margin: 20px;
+    padding: 20px;
+    width: 80%;
+    align-items: stretch;
+    justify-content: space-evenly;
+}
+#colegas img {
+    max-width: 100%;
+    height: auto;
+    border-radius: 20%;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+@media (min-width: 768px) {
+    #colegas {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+        grid-gap: 20px;
+        margin: 20px;
+        padding: 20px;
+        width: 100%;
+        align-items: stretch;
+        justify-content: space-evenly;
+    }
+}
+
