--- a/assets/css/repo.css
+++ b/assets/css/repo.css
@@ -4,9 +4,14 @@
     padding: 0;
 }
 
+h2{
+    margin-left: 40px;
+}
+
 a {
     text-decoration: none;
     color: #000;
+    margin-left: 10px;
 }
 body{
     font-family: 'Roboto', sans-serif;
@@ -34,7 +39,7 @@ body{
 }
 .navbar li a{
     display: block;
-    outline: 1px solid red;
+    outline: 1px solid #ddd;
     padding: 20px;
     border-right: 1px solid #aaa;
     text-decoration: none;
@@ -58,7 +63,6 @@ body{
 
 .navbar .menu-icon{
     /*para aparecer as três barrinhas lá*/
-    border: 1px solid red;
     padding: 28px 20px;
     position: relative;
     float: right;
@@ -129,8 +133,35 @@ body{
         display: none;
     }
 }
+h2{
+    margin-left: 40px;
+}
+#repositorio1{
+    margin-left: 40px;
+    margin-right: 40px;
+    padding: 20px;
+}
+h3{
+    text-transform: capitalize;
+}
+p{
+    margin-top: 10px;
+    margin-left: 10px;
+}
+footer{
+    background-color: #fff;
+    color: #222;
+    text-transform: capitalize;
+    text-align: center;
+    padding: 10px;
+    bottom: 0;
 
-#carousel{
-    overflow: hidden;
-    margin-top: 56px;
+}
+button{
+    background-color: #222;
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    cursor: pointer;
 }
