--- a/assets/views/html/perfil.html
+++ b/assets/views/html/perfil.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Perfil GitHub</title>
     <link rel="stylesheet" href="\assets\css\main.css">
+
     <meta name="perfil-github" content="trabalho prático 1">
     <meta name = "author" content = "Maria Moreira">
 </head>
@@ -45,16 +46,16 @@ ORIENTAÇÃO: use componente do bootstrapLinks to an external site. (detalhes no
         <section id="perfil">
             <div id="containerperfil">
                 <div class="fotoperfil">
-                    <img src="https://avatars.githubusercontent.com/u/43958075?v=4" alt="foto perfil">
+                    <img src="https://avatars.githubusercontent.com/u/144185523?s=400&u=b35ee1fb6a6eb88d422dd11e5d7307b225bd5c89&v=4" alt="foto perfil">
                     
                 </div>
                 <div class="infoperfil">
-                    <strong>Bruna Markowisk</strong>
-                    <p>I'm focused on sharing my knowledge with other Devs and frequently publishing my repositories so that I can make a difference in the learning of the community. I'd like to invite you to see my projects and feel free to contact me if you want!</p>
+                    <strong>Maria Moreira</strong>
+                    <p>Estudante de Engenharia de Software</p>
                     <div id="info">
                         <div class="infolocsite">
                             <p><strong>location:</strong> Belo Horizonte, MG, Brazil</p>
-                            <p><strong>site:</strong><a href="https://github.com/Brunamark"> GitHub</a></p>
+                            <p><strong>site:</strong><a href="https://github.com/mecrym"> GitHub</a></p>
                         </div>
                         <div class="iconefollow">
                             <svg class="followers" xmlns="http://www.w3.org/2000/svg" height="20" width="17.5" viewBox="0 0 448 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path fill="#4a6696" d="M304 128a80 80 0 1 0 -160 0 80 80 0 1 0 160 0zM96 128a128 128 0 1 1 256 0A128 128 0 1 1 96 128zM49.3 464H398.7c-8.9-63.3-63.3-112-129-112H178.3c-65.7 0-120.1 48.7-129 112zM0 482.3C0 383.8 79.8 304 178.3 304h91.4C368.2 304 448 383.8 448 482.3c0 16.4-13.3 29.7-29.7 29.7H29.7C13.3 512 0 498.7 0 482.3z"/></svg>
@@ -349,4 +350,6 @@ ORIENTAÇÃO: use componente do bootstrapLinks to an external site. (detalhes no
         <p><strong>Responsável pelo site: Maria Moreira</strong></p>
     </footer>
 </body>
+
+<script src="assets/js/perfil.js"></script>
 </html>
