--- a/assets/views/html/repo3.html
+++ b/assets/views/html/repo3.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Perfil GitHub</title>
-    <link rel="stylesheet" href="\assets\css\repo.css">
+    <link rel="stylesheet" href="..\assets\css\repo.css">
     <meta name="perfil-github" content="trabalho prático 1">
     <meta name = "author" content = "Maria Moreira">
 </head>
@@ -41,23 +41,27 @@ ORIENTAÇÃO: use componente do bootstrapLinks to an external site. (detalhes no
             o q esta no for tem q ser igual o id-->
     </header>
     <main>
-        <h2>Repositorio: JavaScript</h2>
+        <h2>Repositorio: FullStack Santander</h2>
         <hr>
         <section id="repositorio1">
 
             <h3>descrição</h3>
-                <p>Diversos Códigos com Desafios em C.</p><!--na realidade não tem nenhuma, mas para ter alguma coisa para colocar no trabalho vai ser essa-->
+                <p>Desafios Bootcamp Fullstack Santander</p><!--na realidade não tem nenhuma, mas para ter alguma coisa para colocar no trabalho vai ser essa-->
             <div class="dadosrep">
                 <h3>data de criação</h3>
-                    <p>2023-05-15</p>
+                    <p>2023-08-30</p>
                 <h3>linguagem</h3>
-                    <p>C</p>
-                    <p>C++</p>
+                    <p>JavaScript</p>
+                    <p>HTML</p>
+                    <p>CSS</p> 
+                    <p>Java</p>
                 <h3>link de acesso</h3>
-                    <a href="https://github.com/Brunamark/Desafio_C">Desafio C</a>
+                    <a href="https://github.com/Brunamark/FullStack_Santander">FullStack Santander</a>
                 <h3>tópicos</h3>
-                    <button>C</button>
-                    <button>C++</button>
+                    <button>JavaScript</button>
+                    <button>HTML5</button>
+                    <button>CSS</button>
+                    <button>Java</button>
                 </div>
                 <div class="icones">
                     <div class="starfork">
