--- a/assets/views/perfil.html
+++ b/assets/views/perfil.html
@@ -4,20 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Perfil GitHub</title>
-    <link rel="stylesheet" href="\assets\css\main.css">
+    <link rel="stylesheet" href="/assets/css/main.css">
 
     <meta name="perfil-github" content="trabalho prático 1">
     <meta name = "author" content = "Maria Moreira">
 </head>
-<!--Tela principal (index.html)
-    Cabeçalho com seu nome e menu de seções do site 
-    Seção1 - apresentação do seu perfil no GitHub com foto/avatar, nome e sobrenome, descrição, botões de contato (por exemplo, e-mail, Linkedin, etc)
-    Seção 2 - grupo de cards com informações dos repositórios mantidos pelo aluno no GitHub. (Pelo menos 3 itens)
-ORIENTAÇÃO: use componente do bootstrapLinks to an external site. (detalhes no link)
-    Seção 3 - carrossel/slider com conteúdos e respectivas imagens sugeridos pelo aluno (Artigos, vídeos, infográficos, etc) (Pelo menos 5 itens)
-ORIENTAÇÃO: use componente do bootstrapLinks to an external site. (detalhes no link)
-    Seção 4 - grade com apresentação dos principais colegas de trabalho no curso. (Pelo menos 3 itens)
-    Rodapé com informações sobre responsável pelo site (aluno/aluna) -->
+
 <body>
     <header>
         <nav class="navbar">   
@@ -26,13 +18,13 @@ ORIENTAÇÃO: use componente do bootstrapLinks to an external site. (detalhes no
             <label for="menu-btn" class="menu-icon">
                 <span class="nav-icon"></span>
             </label>
-            <!--div class="menu"-->
+
                 <ul class="menu">
                     <li><a href="#repositórios">repositórios</a></li>
                     <li><a href="#conteúdo sugerido">conteúdo sugerido</a></li>
                     <li><a href="#colegas de trabalho">colegas de trabalho</a></li>
                 </ul>
-            <!--/div-->
+
         </nav>
         <br><br><br><br><!--gambiarra para n sumir com o nome da pagina-->
         <!--<label for="blah">label here</label>
