--- a/perfil-github-TP2/public/styles/main.css
+++ b/perfil-github-TP2/public/styles/main.css
@@ -3,6 +3,16 @@
   margin: 0;
   padding: 0;
 }
+// <uniquifier>: Use a unique and descriptive class name
+
+.climate-crisis-<uniquifier> {
+  font-family: "Climate Crisis", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+  font-variation-settings:
+    "YEAR" 1979;
+}
 
 body {
   font-family: 'Roboto', sans-serif;
@@ -14,10 +24,18 @@ body {
   padding: 0;
 }
 
+h2{
+  font-family: "Climate Crisis", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;/*faz com que carregue outra fonte caso a primeira não carregue*/
+}
+
 #perfil{
   display: grid;
-  grid-template-columns: 1fr 3fr;
-  gap: 1em;
+  grid-template-columns: 1fr 2fr;
+  gap: 70px;
   padding: 2em;
   grid-template-areas:  "foto nome"
                         "foto bio"
@@ -79,3 +97,41 @@ footer {
   height: 100px;
   border-radius: 50%;
 }
+
+.carousel-container {
+  position: relative;
+  width: 100%;
+  overflow: hidden;
+}
+
+.carousel-wrapper {
+  display: flex;
+  transition: transform 0.5s ease;
+}
+
+.carousel-image {
+  flex: 0 0 70%;
+  max-width: 70%;
+  object-fit: contain;
+}
+
+.carousel-arrow {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  background-color: rgba(0, 0, 0, 0.5);
+  border: none;
+  color: white;
+  padding: 10px;
+  cursor: pointer;
+}
+
+.left-arrow {
+  left: 10px;
+}
+
+.right-arrow {
+  right: 10px;
+}
+
+
