pagina inicial finalizada

--- a/perfil-github-TP2/public/styles/main2.css
+++ b/perfil-github-TP2/public/styles/main2.css
@@ -30,7 +30,8 @@ a{
 }
 
 h2{
-  padding: 30px;
+  margin: 30px;
+  margin-left: 30px;
   font-family: "Climate Crisis", sans-serif;
   font-optical-sizing: auto;
   font-weight: 400;
@@ -54,10 +55,8 @@ h2{
   padding-bottom: 80px;
   grid-template-areas:  "foto nome"
                         "foto bio"
-                        "foto seguidores"
-                        "foto localizacao"
-                        "foto github"
-                        "foto linkedin";
+                        "foto info2"
+                        "foto icones2";
   border-bottom: 2px solid #10002b;
   max-height: fit-content;
 }
@@ -65,13 +64,12 @@ h2{
 @media (max-width: 1024px) {
   #perfil2 {
     grid-template-columns: 1fr 1fr;
-    grid-template-areas:  "foto"
-                          "nome"
-                          "bio"
-                          "seguidores"
-                          "localizacao"
-                          "github"
-                          "linkedin";
+    grid-template-areas:  "foto foto"
+                          "nome nome"
+                          "bio bio"
+                          "seguidores seguidores"
+                          "localizacao localizacao"
+                          "github linkedin";
     padding-top: 30px;
     padding-left: 50px;
     padding-bottom: 80px;
@@ -131,6 +129,14 @@ h2{
 
 .descricao{
   grid-area: bio;
+  text-align: center;
+}
+
+.info2{
+  grid-area: info2;
+  display: flex;
+  justify-content: center;
+  gap: 50px;
 }
 
 .seguidores{
@@ -141,15 +147,12 @@ h2{
   grid-area: localizacao;
 }
 
-.github{
-  grid-area: github;
-  margin-left: 50px;
+.icones2{
+  grid-area: icones2;
+  display: flex;
+  justify-content: center;
+  gap: 50px;
 }
-
-.linkedin{
-  grid-area: linkedin;
-}
-
 
 #seguindo{
   padding: 2em;
